# python-project-52

./: Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: tests-check.yml
task_manager/: mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: database.json  test_data.json
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabel_task_labels.py
task_manager/templates/: base.html  footer.html  index.html  login.html  navigation.html
task_manager/templates/labels/: create_label.html  delete_label.html  label_list.html
task_manager/templates/statuses/: create_status.html  delete_status.html  status_list.html
task_manager/templates/task_manager/: base.html
task_manager/templates/tasks/: create_task.html  delete_task.html  tasks_list.html  update_task.html
task_manager/templates/users/: create.html  delete.html  list_users.html  update.html
task_manager/tests/: test_home.py  tests.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_usersmodel_options_alter_usersmodel_managers_and_more.py  0003_alter_usersmodel_username.py  0004_alter_usersmodel_username.py  0005_alter_usersmodel_username.py  (+2 more)
(+2 files in other folders)
