[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager is a web-app allowing you to create tasks, custom statuses and labels for them, assign executors, etc."
authors = ["Maksim Lesnikov <maximborzya75@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Maksim75ru/python-project-52"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free For Home Use",
    "Operating System :: Unix",
]
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
dj-database-url = "^2.0.0"
django-bootstrap4 = "^23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
